--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,7 +29,7 @@
 			  </div>
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
-			      <li><a href="/newpost">Написать новый пост</a></li>			
+			      <li><a href="/new">Написать новый пост</a></li>			
 			    </ul>			    
 			  </div><!--/.nav-collapse -->
 			</nav>
