--- a/views/new.erb
+++ b/views/new.erb
@@ -1,6 +1,6 @@
 <h2>Создаём новый пост</h2>
-<form name="post" action="/new" method="POST" role="form">
-  <textarea style="width: 500px" class="form-control" rows="6" placeholder="Введите текст поста..."></textarea>
+<form action="/new" method="POST" role="form">
+  <textarea name="post_txt" style="width: 500px" class="form-control" rows="6" placeholder="Введите текст поста..."></textarea>
   <br/>
   <button type="submit" class="btn btn-primary">Уиии!</button>
 </form>
