--- a/views/index.erb
+++ b/views/index.erb
@@ -3,8 +3,8 @@
 	<% @results.each do |post| %>
 		<%= post['content'] %>
 		<br/>
-		<span style="color: #b2b2b2; font-size: 80%; font-style: italic"> Добавлен:
-			<%= post['create_date'] %>
+		<span style="color: #b2b2b2; font-size: 80%; font-style: italic">
+		Написал <%= post['username'] %> <%= post['create_date'] %>
 		</span>
 		<br/>
 		<a href="/details/<%= post['id'] %>">Комментарии</a>
