--- a/views/new.erb
+++ b/views/new.erb
@@ -1,6 +1,11 @@
-<h2>Создаём новый пост</h2>
+<h2>Новый пост.</h2>
 <form action="/new" method="POST" role="form">
-  <textarea name="post_txt" style="width: 500px" class="form-control" rows="6" placeholder="Введите текст поста..."></textarea>
-  <br/>
-  <button type="submit" class="btn btn-primary">Уиии!</button>
+	<label for="exampleInputEmail1">Представьтесь:</label>
+    <input style="width: 500px" name="username" type="text" class="form-control" id="exampleInputEmail1" placeholder="Введите ваше имя..." value="<%= @username %>">
+    <br/>
+    <label for="exampleInputEmail1">Введите текст поста:</label>
+	<textarea name="post_txt" style="width: 500px" class="form-control" rows="6" placeholder="Введите текст поста..."></textarea>
+	<br/>
+	
+	<button type="submit" class="btn btn-primary">Уиии!</button>
 </form>
