bug fixed validation of comments

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 		<%= post['content'] %>
 		<br/>
 		<span style="color: #b2b2b2; font-size: 80%; font-style: italic">
-		Написал <%= post['username'] %> <%= post['create_date'] %>
+		<%= post['username'] %> <%= post['create_date'] %>
 		</span>
 		<br/>
 		<a href="/details/<%= post['id'] %>">Комментарии</a>
