--- a/views/details.erb
+++ b/views/details.erb
@@ -1,24 +1,17 @@
-<h2>Пост #<%= @post_id %></h2>
+<h2>Пост #<%= @post.id %></h2>
 <p>
-	<%= @row['content'] %>
+	<%= @post.content %>
 	<span style="color: #b2b2b2; font-size: 80%; font-style: italic"> 
 	<br/>
-	Написал <%= @row['username'] %> <%= @row['create_date'] %>
+	Написал <%= @post.username %> <%= @post.datestamp %>
 	</span>
 	<br/>
 </p>
-<% @comments.each do |comment| %>
-		<p>
-			<%= comment['content'] %>
-			<br/>
-			<span style="color: #b2b2b2; font-size: 80%; font-style: italic">
-			Добавлен <%= comment['create_date'] %>
-			</span>
-		</p>
-<% end %>
+
+
 <p>
-	<form action="/details/<%= @row['id'] %>" method="POST" role="form">
-	  <textarea name="comment_txt" style="width: 500px" class="form-control" rows="6" placeholder="Введите текст комментария..."></textarea>
+	<form action="/details/<%= @post.id %>" method="POST" role="form">
+	  <textarea name="post[content_comm]" style="width: 500px" class="form-control" rows="6" placeholder="Введите текст комментария..."></textarea>
 	  <br/>
 	  <button type="submit" class="btn btn-primary">Уиии!</button>
 	</form>
